# miaosha

./: README.md
jd_miaosha_rs/: .gitignore  .travis.yml  Cargo.toml  chrome_switches.cpp
jd_miaosha_rs/ci/: before_deploy.sh
jd_miaosha_rs/config/: conf.toml  log.yml
jd_miaosha_rs/src/: error.rs  executor.rs  main.rs  platform.rs  types.rs
jd_miaosha_rs/src/models/: address.rs  area.rs  goods.rs  mod.rs  order.rs  shopping_cart.rs  user.rs
jd_miaosha_rs/src/services/: area.rs  delivery_address.rs  driver.rs  goods.rs  mod.rs  order.rs  reqwest_async.rs  shopping_cart.rs  user.rs
jd_miaosha_rs/src/ui/: app.rs  flags.rs  message.rs  mod.rs  style.rs
jd_miaosha_rs/src/ui/components/: delivery_address.rs  goods.rs  mod.rs  order.rs  shopping_cart.rs  user.rs
jd_miaosha_rs/src/utils/: helper.rs  icon.rs  img.rs  mod.rs  proxy_ip.rs
jd_miaosha_rs_api/: .gitignore  Cargo.toml
jd_miaosha_rs_api/config/: conf.toml  log.yml
jd_miaosha_rs_api/sql/: miaosha.sql  v1.sql
jd_miaosha_rs_api/src/: access.rs  error.rs  main.rs  types.rs
jd_miaosha_rs_api/src/apis/: mod.rs  shopping_cart.rs  user.rs
jd_miaosha_rs_api/src/models/: mod.rs
jd_miaosha_rs_api/src/req/: mod.rs  shopping_cart.rs  user.rs
jd_miaosha_rs_api/src/services/: mod.rs  shopping_cart.rs  user.rs
jd_miaosha_rs_api/src/utils/: check.rs  mod.rs  token.rs
jd_miaosha_rs_api/tests/: shopping_cart.rs  user.rs
